<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppWhiteBg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/app_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/app_margin" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login_to_digital_world"
        android:textColor="@color/colorAppBlack"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_login_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/your_online_to_offline_experience"
        android:textColor="@color/colorAppBlack"
        android:textSize="@dimen/text_size_12sp"/>

    <include
        android:id="@+id/lay_mobile_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        layout="@layout/layout_common_data_entry"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_desc"
        android:layout_marginTop="@dimen/dimen_40dp"/>

    <TextView
        android:id="@+id/tv_divider"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_generate_otp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:background="@color/colorBorderTitle"/>
    <Button
        android:id="@+id/btn_generate_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_selection_effect"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:enabled="false"
        android:text="@string/generate_otp"/>

</androidx.constraintlayout.widget.ConstraintLayout>